--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
+    <link rel = "icon" href = "https://www.youtube.com/s/desktop/6b6091a2/img/favicon_32x32.png"  type = "image/x-icon">
   
     <title>YouTube Application</title>
   </head>
